| Bug #39075 | Crash in mysqld when running ndb_add_partition (4 nodes) | ||
|---|---|---|---|
| Submitted: | 27 Aug 2008 16:23 | Modified: | 1 Sep 2008 8:12 |
| Reporter: | Martin Skold | Email Updates: | |
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S2 (Serious) |
| Version: | mysql-5.1-telco-6.4 | OS: | Linux |
| Assigned to: | Jonas Oreland | Target Version: | |
[1 Sep 2008 8:11]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/52962 2743 Jonas Oreland 2008-09-01 ndb - bug#39075 The "index/add partition" dih-connect ptr was not initialized correctly
[1 Sep 2008 8:12]
Jonas Oreland
no docs needed, feature not released
[1 Sep 2008 8:12]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/52963 2743 Jonas Oreland 2008-09-01 ndb - bug#39075 The "index/add partition" dih-connect ptr was not initialized correctly

Description: When running ndb_add_partition on a 4-node cluster a crash in mysqld is encountered: mysql-test-run: WARNING: Forcing kill of process 16849 ndb.ndb_add_partition [ fail ] mysqltest: At line 90: query 'alter online table t1 add partition partitions 1' failed: 2013: Lost connection to MySQL server during query gdb ../sql/mysqld var/master-data/core ... #9 0x086ae716 in NdbDictInterface::parseTableInfo (ret=0xb705d790, data=0x8c3c260, len=201, fullyQualifiedNames=true, version=4294967295) at NdbDictionaryImpl.cpp:2704 2704 DBUG_ASSERT(impl->m_fragmentCount > 0); How to repeat: Edit mysql-test-run.pl: === modified file 'mysql-test/mysql-test-run.pl' --- mysql-test/mysql-test-run.pl 2008-08-26 10:11:03 +0000 +++ mysql-test/mysql-test-run.pl 2008-08-27 16:13:28 +0000 @@ -1252,7 +1252,7 @@ sub command_line_setup () { $clusters->[0]= { name => "Master", - nodes => 2, + nodes => 4, port => "$opt_ndbcluster_port", data_dir => "$data_dir", connect_string => "host=localhost:$opt_ndbcluster_port", run ndb_add_partition test