ndb - bug#39075   The "index/add partition" dih-connect ptr was not initialized   correctly